@@ -391,6 +391,14 @@ class _DatabaseHandler extends stdClass
     
     $message = $ex->getMessage();
     
+    // If the message involves a complaint about the sql_mode, point the user to a
+    // help page about setting the sql_mode.
+    if (stristr($message, "sql_mode=")) {
+    	$message .= "<br><br><b>" . t("It appears this error is being caused because of your server's sql_mode setting.") . "</b> ";
+    	$message .= t("To set your sql_mode for MySQL, please see the following help page: <a href='http://getflightpath.com/node/1161' target='_blank'>http://getflightpath.com/node/1161</a>");
+    }
+    
+    
     $file = $arr[2]["file"];
     if (strlen($file) > 50) {
       $file = "..." . substr($file, strlen($file) - 50);
