@@ -689,7 +689,7 @@ CREATE TABLE `student_tests` (
   `test_id` varchar(20)   DEFAULT '',
   `category_id` varchar(20)   DEFAULT '',
   `score` varchar(10)   DEFAULT '',
-  `date_taken` datetime   DEFAULT '0000-00-00 00:00:00',
+  `date_taken` datetime   DEFAULT '1970-01-01 00:00:01',
   PRIMARY KEY (`id`),
   KEY `student_id` (`student_id`)
 ); ";
